--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <!--Empty container for our grid-->
-    <div class="container"></div>
+    <div id="container"></div>
     
     <script src="./app.js" defer></script>
 </body>
