Added title, and applied basics stylings to grid

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
 <body>
 
+    <!--Title-->
+    <h1 id="title">Etch-a-Sketch!</h1>
+
     <!--Empty container for our grid-->
     <div id="container"></div>
     
