--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!--Title-->
     <h1 id="title">Etch-a-Sketch!</h1>
 
+    <!--Create grid button-->
+    <button id="set-grid">+ New Sketch</button>
+
     <!--Empty container for our grid-->
     <div id="container"></div>
     
