Made new clear button, clears the current grids paint for fresh start

--- a/index.html
+++ b/index.html
@@ -14,8 +14,15 @@
     <!--Title-->
     <h1 id="title">Etch-a-Sketch!</h1>
 
-    <!-- Create grid button-->
-    <button id="set-grid">+ New Sketch</button> 
+    <!--Options container-->
+    <div class="options">
+    
+        <!-- reset grid button-->
+    <button id="set-grid">Reset</button> 
+    <!--Clear/erase grid-->
+    <button id="erase">Clear</button>
+
+    </div>
 
     <!--Empty container for our grid-->
     <div id="container"></div>
